[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameLogic.gd" type="Script" id=1]
[ext_resource path="res://fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://art/crosshair.png" type="Texture" id=3]
[ext_resource path="res://scripts/Recreation/PlayerCrosshair.gd" type="Script" id=4]
[ext_resource path="res://art/city.png" type="Texture" id=5]
[ext_resource path="res://art/ground.png" type="Texture" id=6]
[ext_resource path="res://art/missilearrangement.png" type="Texture" id=7]
[ext_resource path="res://art/background.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 7 )

[node name="Spatial" type="Node2D"]
script = ExtResource( 1 )

[node name="HUDAndTitleScreen" type="CanvasLayer" parent="."]

[node name="HighScore" type="Label" parent="HUDAndTitleScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_right = 56.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "HIGHSCORE"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerScore" type="Label" parent="HUDAndTitleScreen"]
margin_right = 112.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "YOUSCORE"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AlphaLabel" type="Label" parent="HUDAndTitleScreen"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -9.0
margin_right = 40.0
custom_fonts/font = ExtResource( 2 )
text = "LOUT"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CoinLabel" type="Label" parent="HUDAndTitleScreen"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 40.0
custom_fonts/font = ExtResource( 2 )
text = "1 COIN 1 PLAY       ATARI 1980"
__meta__ = {
"_edit_lock_": true
}

[node name="OmegaLabel" type="Label" parent="HUDAndTitleScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -9.0
custom_fonts/font = ExtResource( 2 )
text = "LOUT"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="DeltaLabel" type="Label" parent="HUDAndTitleScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
custom_fonts/font = ExtResource( 2 )
text = "LOUT"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerCrosshair" type="Sprite" parent="."]
position = Vector2( 128, 200 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="GeneralTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="EarthHolder" type="Node" parent="."]

[node name="Ground" type="Sprite" parent="EarthHolder"]
modulate = Color( 1, 0.776471, 0, 1 )
position = Vector2( 0, 205 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="CityHolder" type="Node" parent="EarthHolder"]

[node name="L3" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 36, 208 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/L3"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/L3/Collisions"]
shape = SubResource( 1 )

[node name="L2" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 63, 209 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/L2"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/L2/Collisions"]
shape = SubResource( 1 )

[node name="L1" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 87, 210 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/L1"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/L1/Collisions"]
shape = SubResource( 1 )

[node name="R1" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 140, 208 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/R1"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/R1/Collisions"]
shape = SubResource( 1 )

[node name="R2" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 172, 205 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/R2"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/R2/Collisions"]
shape = SubResource( 1 )

[node name="R3" type="Sprite" parent="EarthHolder/CityHolder"]
position = Vector2( 200, 209 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/CityHolder/R3"]
position = Vector2( 8, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/CityHolder/R3/Collisions"]
shape = SubResource( 1 )

[node name="SiloHolder" type="Node" parent="EarthHolder"]

[node name="SiloAlpha" type="Sprite" parent="EarthHolder/SiloHolder"]
position = Vector2( 10, 206 )
texture = ExtResource( 7 )
centered = false
hframes = 11
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/SiloHolder/SiloAlpha"]
position = Vector2( 10.5, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/SiloHolder/SiloAlpha/Collisions"]
shape = SubResource( 2 )

[node name="SiloDelta" type="Sprite" parent="EarthHolder/SiloHolder"]
position = Vector2( 113, 206 )
texture = ExtResource( 7 )
centered = false
hframes = 11
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/SiloHolder/SiloDelta"]
position = Vector2( 10.5, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/SiloHolder/SiloDelta/Collisions"]
shape = SubResource( 2 )

[node name="SiloOmega" type="Sprite" parent="EarthHolder/SiloHolder"]
position = Vector2( 230, 206 )
texture = ExtResource( 7 )
centered = false
hframes = 11
__meta__ = {
"_edit_lock_": true
}

[node name="Collisions" type="Area2D" parent="EarthHolder/SiloHolder/SiloOmega"]
position = Vector2( 10.5, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthHolder/SiloHolder/SiloOmega/Collisions"]
shape = SubResource( 2 )
